<resources>
    <string name="app_name">Mundus4D Complutum</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_real_aumentada">RealAumentada</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="sel_edificio">Seleccionar Edificio</string>
    <string name="info">Info</string>
    <string name="fachada_monumental">Fachada monumental</string>
    <string name="criptoportico">Criptoportico</string>
    <string name="curia">Curia</string>
    <string name="decumanoiii">DecumanoIII</string>
    <string name="basilica">Basilica</string>
    <string name="portico_sur">Portico Sur</string>
    <string name="termas_sur">Termas Sur</string>
    <string name="mercado">Mercado</string>
    <string name="ninfeo">Ninfeo</string>
    <string name="title_activity_historia_activity">Historia_activity</string>
    <string name="title_activity_funciones_activity">Funciones_activity</string>
    <string name="title_activity_sabias">Sabias</string>
    <string name="basilica_h1">
<![CDATA[ 
        					<p>Se construyó en los años 50/60 del siglo I d.C, en época del emperador Claudio, para ser reformada en el último cuarto del siglo III. Su diseño se encuadra dentro de los cánones constructivos romanos de Basílica, que tiene su origen en el Norte y Centro de Italia, en época de Augusto. </p> 
 							<p>Se compone de un espacio central rodeado por un pasillo <i>(ambulacrum)</i>.Construida en <i>opus caementicium</i> sobre un zócalo de sillares de piedra, sus <b>dimensiones</b> hablan de <b>32,5 x 16,7m</b> en planta.  Se dispuso un suelo de <i>opus signimun (un mortero de cal, arena, piedra y ladrillo triturado) </i> elevado en el siglo III para hacerlo coincidir en altura con su edificio anexo, la curia, conformando un acceso hasta entonces inédito. 
 							Las paredes interiores estaban revestidas y decoradas con un revoco blanco y con mármoles de sustitución en distintos colores de canteras cercanas.</p> 
							<p>Su emplazamiento es completamente atípico en el mundo romano, ubicado junto a las termas. Hecho que lleva a preguntarse si realmente se trata de una basílica civil. </p> 
        
        						]]>
    </string>
    <string name="basilica_f">
<![CDATA[ 
        					<p>En las basílicas civiles se desarrollaban actividades de diversa índole, como pueden ser importantes transacciones financieras, acuerdos comerciales, actos de culto, pero sobre todo eran el tribunal  de justicia.</p> 
							<p>Se dispondría en el extremo Sur un tribunal elevado sobre una tarima de madera, donde se situarían el magistrado y las autoridades encargadas del juicio. En el lado norte, junto al paso a la curia, habría una cartela en <i>opus sectile (recortar placas de mármol de diversos colores para componer las figuras geométricas, de animales o humanas)</i> y cerca de él, una estatua en honor al gobernador, emperador o benefactor de la obra.</p> 
							<p>Se presupone aquí el lugar donde según la tradición se dictó sentencia contra los niños Justo y Pastor, condenados por las autoridades durante la persecución contra los cristianos decretada por el emperador Diocleciano. </p> 
        						]]>
    </string>
    <string name="basilica_s">
<![CDATA[ 
        					<p>El <b>Paredón del Milagro</b> fue el lugar donde la tradición cuenta que fueron torturados los Santos Niños hacía el año 303 d.C. Otra vertiente asegura que este hecho no pudo ser así, pues no estaba permitido realizar ejecuciones dentro de las ciudades romanas. Fuera como fuese, lo cierto es que el paredón constituía la fachada septentrional de las amortizadas termas norte que pasaron a formar la curia tras la gran reforma de finales del siglo III d.C.</p> 
							<p>El muro conserva las marcas de las grapas que sujetaban los mármoles y de los mechinales constructivos, donde se fijaban los andamios.</p> 
							<p>Durante siglos se mantuvo el culto a los Santos Niños, llevándose a cabo ritos cristianos según recogen los Annales Complutenses en la primera mitad del siglo XVII. Por esta época todavía se presupone un nivel de conservación de la fachada original bastante alto. Sin embargo, a mediados del siglo XX solo se reconocían los restos actuales del paredón. Fue protegido por una ermita que lo albergaba en su interior desde 1968, hasta el momento en el que pasó a formar parte del parque arqueológico. El impulsor de su creación fue Esteban Múgica, propietario de los terrenos en aquel momento.</p> 
							<p>Hay documentadas procesiones desde la “fuente de la salud”, especie de ninfeo al oeste de Complutum, y desde pueblos de alrededor hacia el siglo XVI.</p> 
        						]]>
    </string>
    <string name="curia_h">
<![CDATA[
        					<p>La curia se asienta sobre las antiguas termas norte, como parte de las profundas reformas llevadas a cabo en el foro a finales del siglo III d.C. </p> 
							<p> El antiguo <b>frigidarium</b> pasa a ser un espacio de tránsito desde la basílica, lugares que antes no tenía ningún tipo de conexión entre ellos. El <b>tepidarium</b>, a su vez, se convierte en otro paso más para llegar a la curia, con acceso desde la planta baja del criptopórtico. Situada sobre el antiguo <b>caldarium</b> se emplaza la curia. Dentro de ésta es probable la existencia de una especie de gradas donde se sentarían los senadores y en la parte sur de la misma, junto al ábside, el lugar presidencial donde se emplazaría la presidencia.   </p> 
							<p>La calefacción desaparece parcialmente llegando por medio de los hypocaustums (calefacción subterránea) al caldarium y tepidarium.</p>
        					 
        						]]>
    </string>
    <string name="curia_f">
<![CDATA[
        					<p>Son las salas destinadas a la administración y el gobierno de la ciudad.</p> 
							<p>Los romanos exportaron las curias a todas las ciudades que obtenían el estatus de <b><i>municipium</b></i>, pasando a tener estas su propio senado y funcionarios encargados de la administración central. No eran electos, sino designados por el gobierno central. </p> 
							<p>Las sesiones se realizaban bajo la presidencia de un cónsul o de un pretor. El presidente leía el texto del proyecto a discutir y se procedía a escuchar la opinión de los senadores. Por último se procedía a la votación realizada colocándose en hilera según su intención de voto y contando el número de senadores en cada fila.</p>  
        					 
        						]]>
    </string>
    <string name="criptoportico_h">
<![CDATA[
        					<p>Los criptopórticos son estructuras subterráneas, sobre los que se podían edificar una o dos plantas más. </p> 
							<p>En Complutum su construcción coincide con la gran reforma del siglo III d.C. Se asienta sobre el acueducto que abastecía a las termas norte y a una fuente pública del siglo I. Construido en <i>opus caementicium</i> y con un suelo de <i>opus spicatum (colocación de ladrillos o piedras talladas en forma de espina de pez)</i>, la planta baja se cierra con una bóveda rebajada con una cubierta plana. La planta superior también se cerraría con forma abovedada. Esta forma, aparte repartir los pesos, ayudaba a mantener una temperatura óptima.  </p> 
        					 
        						]]>
    </string>
    <string name="criptoportico_f">
<![CDATA[
   	    					<p>Se busca crear una especie <i><b>tabularium (archivo municipal)</b></i> y de paso servir de base a una gran fachada monumental. Por otra parte, ofrecía una entrada monumentalizada a la curia. </p>
							<p>Se complementa con esta construcción el espacio administrativo, jurídico y legislativo del municipium.</p> 
        						]]>
    </string>
    <string name="criptoportico_s">
<![CDATA[
        					<p>Como habrá observado quizá le parezca la altura en su interior un poco reducida, pero hay que decir que el romano medio no superaba los 1,65 metros de altura. </p> 
        					  
        					 
        						]]>
    </string>
    <string name="decumanoiii_h">
<![CDATA[
        					<p>Decumano es un término utilizado en el urbanismo romano para identificar las calles con orientación este-oeste. </p> 
							<p>El Decumano III consistía en una calle porticada de 12m de anchura. Se componía de una calzada central de 6m de ancho y a ambos lados un pórtico de 3m de ancho cada uno. </p> 
							<p>Bajo el Decumano III corre la cloaca encargada de desaguar y conducir el agua residual hacía el río Henares.</p> 
							<p>En Complutum se distinguen dos categorías de calles. Las principales, de 12m de anchura y porticadas, entre las que se encuentran el decumano III, IV y las secundarias que carecen de pórticos, reduciéndose la anchura total a 6m.  </p> 		 
        						]]>
    </string>
    <string name="decumanoiii_s">
<![CDATA[
        					<p>Se pueden contemplar auténticas columnas complutenses a lo largo de la calle mayor de Alcalá de Henares. </p> 
							<p>Los restos complutenses han sufrido un gran expolio a lo largo del tiempo ya sea para su utilización  en diferentes construcciones o por simple afán de coleccionismo. </p> 
							<p>Del expolio para su reutilización nos ha quedado como herencia el Palacio Arzobispal y la gran ciudad universitaria de Alcalá de los siglos XVI y XVII. Pero también se utilizaron para construir la ciudad medieval islámica y medieval cristiana.</p> 
							<p>La mayor parte de  Complutum se encuentra enterrada bajo los edificios colindantes. Se calcula que de las 50Ha que compondrían Complutum, 25 de ellas se hayan sepultadas. Los restos pertenecientes al parque arqueológico corresponden al REGIO II y REGIO I. Sin embargo, el REGIO III, IV, V y VI permanecen soterrados o han sido destruidos.</p> 
							<p> Entre las causas de este suceso se culpa al espectacular crecimiento demográfico de Alcalá de Henares en los años 70 del siglo pasado. Alcalá pasó de 40.000 habitantes en los años 60 hasta los 120.000 habitantes. Esto unido a la falta de una legislación regulatoria en materia de preservación arqueológica han llevado a la actual situación. </p> 
        					  
        					]]>
    </string>
    <string name="portico_sur_h">
<![CDATA[
        					<p>El Pórtico Sur fue una zona comercial que como su nombre indica cerraba por el lado sur el foro. En se localizaban las tiendas y talleres de diferentes artesanos y artistas.  Se cree que existiría su homólogo en el lado norte del foro, aunque todavía sin excavar. </p> 
							<p>Se construyó en los años 60-70 del siglo I, sufriendo varias rehabilitaciones a lo largo del tiempo. En el caso de Complutum, el Pórtico Sur se veía cortado por un arco que permitía la entrada y salida del foro. Gracias a los restos encontrados se sabe que una de las tiendas perteneció a un pintor y mosaicista, así como su taller (officina) y la existencia de un bar (thermopolium).  </p>  
        					  
      						]]>
    </string>
    <string name="portico_sur_s">
<![CDATA[
        					<p>Los romanos ya usaba el cristal en las ventanas, gracias a la invención del soplado de vidrio, hecho ocurrido en el siglo I a.C. Pero se dieron cuenta de que el cristal dejaba pasar la luz, pero también el frío. Por lo que inventaron la doble ventana. Los carpinteros hacían dos ranuras en el marco de la ventana separadas por unos centímetros para introducir una lamina de vidrio en cada una de ellas. </p> 
							<p>La doble ventana, aunque se ve como algo relativamente reciente en las viviendas actuales, es algo de lo que se tiene constancia de su existencia en la ciudad romana de Ostia, hace ya 2000 años.</p>     
        					  
        					]]>
    </string>
</resources>